Homepage: Important dates: Fixed bug where flex boxes were stacking on iOS device

--- a/resources/gato-component-patterns/css/importantdates.scss
+++ b/resources/gato-component-patterns/css/importantdates.scss
@@ -13,7 +13,7 @@
         flex-flow: column wrap;
       }      
       .left-col {
-        flex: 1 0 0;
+        flex: 1 0 30%;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -40,7 +40,7 @@
       margin-bottom: 0;
     }
     .events {
-      flex: 3 0 0;
+      flex: 3 0 70%;
       display: flex;
       justify-content: space-around;
       flex-flow: row wrap;
